<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluepink"
    tools:context="placeme.ru.placemedemo.ui.RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/editProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="40sp"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEditLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <EditText
            android:id="@+id/teEditLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvEditPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <EditText
            android:id="@+id/teEditPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            />

        <TextView
            android:id="@+id/tvEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <EditText
            android:id="@+id/teEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvEditSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <EditText
            android:id="@+id/teEditSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvEditNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <EditText
            android:id="@+id/teEditNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nickname"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/saveEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_color"
            android:text="@string/save"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>