<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="placeme.ru.placemedemo.ui.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:id="@+id/root_t">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context="placeme.ru.placemedemo.MapsActivity"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginBottom="329dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/google_places_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/cpb_red"
            app:srcCompat="@drawable/ic_room_black_36dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="30dp" />

        <EditText
            android:id="@+id/search"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:background="@drawable/frame"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/search_hint"
            android:inputType="textPersonName"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="54dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="54dp"
        android:layout_marginStart="100dp"
        android:background="@drawable/button_color"
        android:text="@string/ar_route"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4">


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/cardview_light_background"
            app:srcCompat="@drawable/ic_menu_gallery" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/button_search_parameters"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="?android:attr/colorPressedHighlight"
            app:srcCompat="@drawable/settings_small" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/search_friends"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="32dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/places_ic_search" />

</android.support.constraint.ConstraintLayout>

<!--- android:layout_marginBottom="32dp"
        android:layout_marginEnd="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" -->